--- a/foundations/06-cascade-fix/css/style.css
+++ b/foundations/06-cascade-fix/css/style.css
@@ -3,19 +3,25 @@
   color: hsl(0, 100%, 50%);
 }
 
+.para {
+  font-size: 22px;
+}
+
 .small-para {
   font-size: 14px;
 }
 
-.para {
-  font-size: 22px;
-}
 
 .confirm {
   background: green;
   color: white;
   font-weight: bold;
-} 
+}
+
+#confirm-button {
+    background: green;
+    color: white;
+}
 
 .button {
   background-color: rgb(255, 255, 255);
@@ -23,12 +29,18 @@
   font-size: 20px;
 }
 
+
+div.text {
+    color: green;
+    font-size: 22px;
+}
+
 .child {
   color: red;
   font-size: 14px;
 }
 
-div.text {
-  color: green;
-  font-size: 22px;
+.text.child {
+    color: red;
+    font-size: 14px;
 }
